Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
   <title>Lists Lab</title>
 </head>
 <body>
-  <ul>
-    <li>Kellye's Grilled Cheese Sandwich</li>
+  Kellye's Grilled Cheese Sandwich
       <ul>
         <li>2 slices of bread</li>
         <li>4 slices of cheese</li>
         <li>1 tbsp of butter</li>
       </ul>
-  </ul>
 </body>
 </html>
