Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <li>2 slices of bread</li>
         <li>4 slices of cheese</li>
           <ul>
-            <li>Cheddar</li>
-            <li>Mozarella</li>
-            <li>Pepper Jack</li>
+            <li>cheddar</li>
+            <li>mozarella</li>
+            <li>pepper Jack</li>
           </ul>
         <li>1 tbsp of butter</li>
       </ul>
