--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
           <ul>
             <li>cheddar</li>
             <li>mozarella</li>
-            <li>pepper Jack</li>
+            <li>pepper jack</li>
           </ul>
         <li>1 tbsp of butter</li>
       </ul>
